--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -362,9 +362,9 @@ services:
       LOGSTASH_TAGS: HELP_CENTER_FRONTEND
       HOST: 0.0.0.0
       REACT_APP_MDR_URL : http://app.mdr.${RIT_ENV}.dh.unimaas.nl
-      REACT_APP_MDR_HOME_URL : http://mdrhomepage.${RIT_ENV}.dh.unimaas.nl
+      REACT_APP_MDR_HOME_URL : http://mdr.${RIT_ENV}.dh.unimaas.nl
       REACT_APP_SERVICE_DESK_URL : https://mumc-sandbox.atlassian.net/
-      REACT_APP_DATAHUB_HOME_URL : http://datahubhomepage.${RIT_ENV}.dh.unimaas.nl
+      REACT_APP_DATAHUB_HOME_URL : http://${RIT_ENV}.dh.unimaas.nl
     volumes:
       - './externals/dh-help-center/frontend/src:/app/src'
       - './externals/dh-help-center/frontend/public:/app/public'
