--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -322,6 +322,9 @@ services:
       args:
         - ENV_FILEBEAT_VERSION
     env_file:
+      # REACT_APP_CAPTCHA_SECRET_KEY
+      # ATLASSIAN_API_USERNAME
+      # ATLASSIAN_API_KEY
       - irods.secrets.cfg
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center-backend:${ENV_TAG}
     environment:
@@ -354,6 +357,7 @@ services:
       context: externals/dh-help-center/frontend
       dockerfile: Dockerfile
     env_file:
+      # REACT_APP_CAPTCHA_SITE_KEY
       - irods.secrets.cfg
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center:${ENV_TAG}
     environment:
