--- a/mdr.env
+++ b/mdr.env
@@ -5,7 +5,7 @@ VIRTUAL_HOST=app.mdr.${RIT_ENV}.dh.unimaas.nl
 VIRTUAL_PORT=8000
 
 # SAML
-SAML_IDP_METADATA_URL=http://keycloak.${RIT_ENV}.dh.unimaas.nl:8080/auth/realms/django/protocol/saml/descriptor
+SAML_IDP_METADATA_URL=http://keycloak.${RIT_ENV}.dh.unimaas.nl/auth/realms/django/protocol/saml/descriptor
 SAML_DJANGO_BASE_URL=http://app.mdr.${RIT_ENV}.dh.unimaas.nl
 SAML_DJANGO_WANT_ASSERTIONS_SIGNED="True"                               # SURFconext: True, SRAM: False
 SAML_DJANGO_WANT_RESPONSE_SIGNED="False"                                # SURFconext: True, SRAM: True
