--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -332,8 +332,8 @@ services:
       CONFLUENCE_CLOUD_URL: https://mumc.atlassian.net
       CONFLUENCE_CLOUD_SPACE_KEY: MDRDT
       LOGSTASH_TAGS: HELP_CENTER_BACKEND
-      WATCHFILES_FORCE_POLLING: true
-      AUTO_RELOAD: true
+      WATCHFILES_FORCE_POLLING: true  #DEV
+      AUTO_RELOAD: true                #DEV
       MDR_URL : http://app.mdr.${RIT_ENV}.dh.unimaas.nl
       JIRA_URL: https://mumc-sandbox.atlassian.net
       JIRA_SERVICE_DESK_PROJECT_NAME: "Maastricht Data Repository Support"
@@ -344,7 +344,8 @@ services:
       JIRA_SERVICE_DESK_EXTERNAL_ACCESS_REQUEST_NAME: "External Access Request"
       JIRA_SERVICE_DESK_AUTOMATED_PROCESS_SUPPORT_REQUEST_NAME: "Automated process support request"
     volumes:
-      - ./externals/dh-help-center/backend/:/opt/
+      - ./externals/dh-help-center/backend/:/opt/   #DEV
+#      -  ./logs/dh-help-center/backend/:/var/log/gunicorn/ #acc/prd
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -369,8 +370,9 @@ services:
       REACT_APP_SERVICE_DESK_URL : https://mumc-sandbox.atlassian.net/
       REACT_APP_DATAHUB_HOME_URL : http://${RIT_ENV}.dh.unimaas.nl
     volumes:
-      - './externals/dh-help-center/frontend/src:/app/src'
-      - './externals/dh-help-center/frontend/public:/app/public'
+#       -  ./logs/dh-help-center/frontend/:/var/log/nginx/ #acc/prd
+      - './externals/dh-help-center/frontend/src:/app/src'   #DEV
+      - './externals/dh-help-center/frontend/public:/app/public' #DEV
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -387,8 +389,9 @@ services:
       VIRTUAL_PORT: 3000
       HOST: 0.0.0.0
     volumes:
-      - './externals/dh-home/src:/app/src'
-      - './externals/dh-home/public:/app/public'
+#      - ./logs/dh-home:/var/log/nginx/ #acc/prd
+      - './externals/dh-home/src:/app/src'  #DEV
+      - './externals/dh-home/public:/app/public'  #DEV
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -408,8 +411,9 @@ services:
       REACT_APP_DATAHUB_HC_URL : http://help.mdr.${RIT_ENV}.dh.unimaas.nl
       REACT_APP_DATAHUB_HOME_URL : http://${RIT_ENV}.dh.unimaas.nl
     volumes:
-      - './externals/dh-mdr-home/src:/app/src'
-      - './externals/dh-mdr-home/public:/app/public'
+#      - ./logs/dh-mdr-home/:/var/log/nginx/ #acc/prd
+      - './externals/dh-mdr-home/src:/app/src'  #DEV
+      - './externals/dh-mdr-home/public:/app/public'  #DEV
     profiles: ["minimal","full"]
     networks:
       dh_public:
