--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -374,11 +374,18 @@ services:
     build:
       context: externals/dh-admin-tools/backend
       dockerfile: Dockerfile
+      args:
+        - SSL_ENV=${RIT_ENV}          # Whether to add our own CA-certificate to the CA-rootstore
     image: ${ENV_REGISTRY_HOST}/docker-dev/admin-tools-backend:${ENV_TAG}
     environment:
+      IRODS_HOST: ${ENV_IRODS_ICAT_HOST}
+      IRODS_USER: rods
+      IRODS_PASS: ${ENV_IRODS_PASSWORD_ADMIN}
+      IRODS_CLIENT_SERVER_POLICY: CS_NEG_REQUIRE
       VIRTUAL_HOST: admintoolsbackend.${RIT_ENV}.dh.unimaas.nl
       WATCHFILES_FORCE_POLLING: true
       AUTO_RELOAD: true
+      CACHE_TTL_VALUE: 86400 # in seconds => 24 hours
     volumes:
       - ./externals/dh-admin-tools/backend/:/opt/
     profiles: ["full"]
