Switch back to dev settings, add profile for filebeat-public-logs [DHS-3214, DHS-3157]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -333,8 +333,8 @@ services:
       CONFLUENCE_CLOUD_URL: https://mumc.atlassian.net
       CONFLUENCE_CLOUD_SPACE_KEY: MDRDT
       LOGSTASH_TAGS: HELP_CENTER_BACKEND
-#      WATCHFILES_FORCE_POLLING: true  #DEV
-#      AUTO_RELOAD: true                #DEV
+      WATCHFILES_FORCE_POLLING: true  #DEV
+      AUTO_RELOAD: true                #DEV
       MDR_URL : http://app.mdr.${RIT_ENV}.dh.unimaas.nl
       JIRA_URL: https://mumc-sandbox.atlassian.net
       JIRA_SERVICE_DESK_PROJECT_NAME: "Maastricht Data Repository Support"
@@ -345,8 +345,8 @@ services:
       JIRA_SERVICE_DESK_EXTERNAL_ACCESS_REQUEST_NAME: "External Access Request"
       JIRA_SERVICE_DESK_AUTOMATED_PROCESS_SUPPORT_REQUEST_NAME: "Automated process support request"
     volumes:
-#      - ./externals/dh-help-center/backend/:/opt/   #DEV
-      -  ./logs/dh-help-center/backend/:/var/log/gunicorn/ #acc/prd
+      - ./externals/dh-help-center/backend/:/opt/   #DEV
+#      -  ./logs/dh-help-center/backend/:/var/log/gunicorn/ #acc/prd
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -356,7 +356,7 @@ services:
   help-center:
     build:
       context: externals/dh-help-center/frontend
-      dockerfile: Dockerfile.prd
+      dockerfile: Dockerfile
     env_file:
       # REACT_APP_CAPTCHA_SITE_KEY
       - irods.secrets.cfg
@@ -371,9 +371,9 @@ services:
       REACT_APP_SERVICE_DESK_URL : https://mumc-sandbox.atlassian.net/
       REACT_APP_DATAHUB_HOME_URL : http://${RIT_ENV}.dh.unimaas.nl
     volumes:
-       -  ./logs/dh-help-center/frontend/:/var/log/nginx/ #acc/prd
-#      - './externals/dh-help-center/frontend/src:/app/src'   #DEV
-#      - './externals/dh-help-center/frontend/public:/app/public' #DEV
+#       -  ./logs/dh-help-center/frontend/:/var/log/nginx/ #acc/prd
+      - './externals/dh-help-center/frontend/src:/app/src'   #DEV
+      - './externals/dh-help-center/frontend/public:/app/public' #DEV
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -383,16 +383,16 @@ services:
   dh-home:
     build:
       context: externals/dh-home
-      dockerfile: Dockerfile.prd
+      dockerfile: Dockerfile
     image: ${ENV_REGISTRY_HOST}/docker-dev/dh-home:${ENV_TAG}
     environment:
       VIRTUAL_HOST: ${RIT_ENV}.dh.unimaas.nl
       VIRTUAL_PORT: 3000
       HOST: 0.0.0.0
     volumes:
-      - ./logs/dh-home:/var/log/nginx/ #acc/prd
-#      - './externals/dh-home/src:/app/src'  #DEV
-#      - './externals/dh-home/public:/app/public'  #DEV
+#      - ./logs/dh-home:/var/log/nginx/ #acc/prd
+      - './externals/dh-home/src:/app/src'  #DEV
+      - './externals/dh-home/public:/app/public'  #DEV
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -402,7 +402,7 @@ services:
   mdr-home:
     build:
       context: externals/dh-mdr-home
-      dockerfile: Dockerfile.prd
+      dockerfile: Dockerfile
     image: ${ENV_REGISTRY_HOST}/docker-dev/dh-mdr-home:${ENV_TAG}
     environment:
       VIRTUAL_HOST: mdr.${RIT_ENV}.dh.unimaas.nl
@@ -412,9 +412,9 @@ services:
       REACT_APP_DATAHUB_HC_URL : http://help.mdr.${RIT_ENV}.dh.unimaas.nl
       REACT_APP_DATAHUB_HOME_URL : http://${RIT_ENV}.dh.unimaas.nl
     volumes:
-      - ./logs/dh-mdr-home/:/var/log/nginx/ #acc/prd
-#      - './externals/dh-mdr-home/src:/app/src'  #DEV
-#      - './externals/dh-mdr-home/public:/app/public'  #DEV
+#      - ./logs/dh-mdr-home/:/var/log/nginx/ #acc/prd
+      - './externals/dh-mdr-home/src:/app/src'  #DEV
+      - './externals/dh-mdr-home/public:/app/public'  #DEV
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -429,6 +429,7 @@ services:
     image: ${ENV_REGISTRY_HOST}/docker-dev/filebeat-public-logs:${ENV_TAG}
     volumes:
           - ./logs/:/var/logs/public-containers/ #acc/prd
+    profiles: ["full"]
     networks:
       default:
         aliases:
