--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -333,6 +333,7 @@ services:
       CONFLUENCE_CLOUD_URL: https://mumc.atlassian.net
       CONFLUENCE_CLOUD_SPACE_KEY: MDRDT
       LOGSTASH_TAGS: HELP_CENTER_BACKEND
+      LOGSPOUT: ignore
       WATCHFILES_FORCE_POLLING: true  #DEV
       AUTO_RELOAD: true                #DEV
       MDR_URL : http://app.mdr.${RIT_ENV}.dh.unimaas.nl
@@ -362,6 +363,7 @@ services:
       - irods.secrets.cfg
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center:${ENV_TAG}
     environment:
+      LOGSPOUT: ignore
       VIRTUAL_HOST: help.mdr.${RIT_ENV}.dh.unimaas.nl
       VIRTUAL_PORT: 3000
       LOGSTASH_TAGS: HELP_CENTER_FRONTEND
@@ -386,6 +388,7 @@ services:
       dockerfile: Dockerfile
     image: ${ENV_REGISTRY_HOST}/docker-dev/dh-home:${ENV_TAG}
     environment:
+      LOGSPOUT: ignore
       VIRTUAL_HOST: ${RIT_ENV}.dh.unimaas.nl
       VIRTUAL_PORT: 3000
       HOST: 0.0.0.0
@@ -405,6 +408,7 @@ services:
       dockerfile: Dockerfile
     image: ${ENV_REGISTRY_HOST}/docker-dev/dh-mdr-home:${ENV_TAG}
     environment:
+      LOGSPOUT: ignore
       VIRTUAL_HOST: mdr.${RIT_ENV}.dh.unimaas.nl
       VIRTUAL_PORT: 3000
       HOST: 0.0.0.0
