Add MDR_HOME_URL in mdr.env [DHS-3274]

--- a/mdr.env
+++ b/mdr.env
@@ -39,7 +39,8 @@ WEBDAV_DOWNLOAD_URL=download.${RIT_ENV}.dh.unimaas.nl
 WEBDAV_UPLOAD_URL=upload.${RIT_ENV}.dh.unimaas.nl
 JIRA_URL=https://mumc.atlassian.net
 JIRA_PROJECT_KEY=DHDOSB
-DATAHUB_HOME_URL : http://${RIT_ENV}.dh.unimaas.nl
+DATAHUB_HOME_URL=http://${RIT_ENV}.dh.unimaas.nl
+MDR_HOME_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl
 
 # SMB
 SMB_UM_WINDOWS_PATH=\\foobar.unimaas.nl\iRODS-ingestzones\dev
