Switch to default dev setting for public services [DHS-3275]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -333,8 +333,8 @@ services:
       CONFLUENCE_CLOUD_URL: https://mumc.atlassian.net
       CONFLUENCE_CLOUD_SPACE_KEY: MDRDT
       LOGSPOUT: ignore
-#      WATCHFILES_FORCE_POLLING: true  #DEV
-#      AUTO_RELOAD: true                #DEV
+      WATCHFILES_FORCE_POLLING: true  #DEV
+      AUTO_RELOAD: true                #DEV
       MDR_URL : http://app.mdr.${RIT_ENV}.dh.unimaas.nl
       MDR_HOME_URL : http://mdr.${RIT_ENV}.dh.unimaas.nl
       JIRA_URL: https://mumc-sandbox.atlassian.net
@@ -346,8 +346,8 @@ services:
       JIRA_SERVICE_DESK_EXTERNAL_ACCESS_REQUEST_NAME: "External Access Request"
       JIRA_SERVICE_DESK_AUTOMATED_PROCESS_SUPPORT_REQUEST_NAME: "Automated process support request"
     volumes:
-#      - ./externals/dh-help-center/backend/:/opt/   #DEV
-      - ../docker-common/public-logs/dh-help-center/backend/:/var/log/gunicorn/ #acc/prd
+      - ./externals/dh-help-center/backend/:/opt/   #DEV
+#      - ../docker-common/public-logs/dh-help-center/backend/:/var/log/gunicorn/ #acc/prd
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -357,7 +357,7 @@ services:
   help-center:
     build:
       context: externals/dh-help-center/frontend
-      dockerfile: Dockerfile.prd
+      dockerfile: Dockerfile
     env_file:
       # REACT_APP_CAPTCHA_SITE_KEY
       - irods.secrets.cfg
@@ -372,9 +372,9 @@ services:
       REACT_APP_SERVICE_DESK_URL : https://mumc-sandbox.atlassian.net/
       REACT_APP_DATAHUB_HOME_URL : http://${RIT_ENV}.dh.unimaas.nl
     volumes:
-      - ../docker-common/public-logs/dh-help-center/frontend/:/var/log/nginx/ #acc/prd
-#      - './externals/dh-help-center/frontend/src:/app/src'   #DEV
-#      - './externals/dh-help-center/frontend/public:/app/public' #DEV
+#      - ../docker-common/public-logs/dh-help-center/frontend/:/var/log/nginx/ #acc/prd
+      - './externals/dh-help-center/frontend/src:/app/src'   #DEV
+      - './externals/dh-help-center/frontend/public:/app/public' #DEV
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -384,7 +384,7 @@ services:
   dh-home:
     build:
       context: externals/dh-home
-      dockerfile: Dockerfile.prd
+      dockerfile: Dockerfile
     image: ${ENV_REGISTRY_HOST}/docker-dev/dh-home:${ENV_TAG}
     environment:
       LOGSPOUT: ignore
@@ -392,9 +392,9 @@ services:
       VIRTUAL_PORT: 3000
       HOST: 0.0.0.0
     volumes:
-      - ../docker-common/public-logs/dh-home:/var/log/nginx/ #acc/prd
-#      - './externals/dh-home/src:/app/src'  #DEV
-#      - './externals/dh-home/public:/app/public'  #DEV
+#      - ../docker-common/public-logs/dh-home:/var/log/nginx/ #acc/prd
+      - './externals/dh-home/src:/app/src'  #DEV
+      - './externals/dh-home/public:/app/public'  #DEV
     profiles: ["minimal","full"]
     networks:
       dh_public:
@@ -415,9 +415,9 @@ services:
       REACT_APP_DATAHUB_HC_URL : http://help.mdr.${RIT_ENV}.dh.unimaas.nl
       REACT_APP_DATAHUB_HOME_URL : http://${RIT_ENV}.dh.unimaas.nl
     volumes:
-      - ../docker-common/public-logs/dh-mdr-home/:/var/log/nginx/ #acc/prd
-#      - './externals/dh-mdr-home/src:/app/src'  #DEV
-#      - './externals/dh-mdr-home/public:/app/public'  #DEV
+#      - ../docker-common/public-logs/dh-mdr-home/:/var/log/nginx/ #acc/prd
+      - './externals/dh-mdr-home/src:/app/src'  #DEV
+      - './externals/dh-mdr-home/public:/app/public'  #DEV
     profiles: ["minimal","full"]
     networks:
       dh_public:
