--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -357,7 +357,7 @@ services:
   help-center:
     build:
       context: externals/dh-help-center/frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile #dockerfile: Dockerfile.prd
     env_file:
       # REACT_APP_CAPTCHA_SITE_KEY
       - irods.secrets.cfg
@@ -384,7 +384,7 @@ services:
   dh-home:
     build:
       context: externals/dh-home
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile #dockerfile: Dockerfile.prd
     image: ${ENV_REGISTRY_HOST}/docker-dev/dh-home:${ENV_TAG}
     environment:
       LOGSPOUT: ignore
