--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.4'
 services:
   irods-db:
     image: postgres:${ENV_POSTGRES_VERSION}
@@ -35,6 +35,7 @@ services:
     build:
       context: externals/dh-irods/irods-base/
       dockerfile: Dockerfile
+      target: icat-run
       args:
         - ENV_IRODS_VERSION
         - ENV_IRODS_PYTHON_PLUGIN_VERSION
