--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -359,7 +359,8 @@ services:
   help-center:
     build:
       context: externals/dh-help-center/frontend
-      dockerfile: Dockerfile #dockerfile: Dockerfile.prd
+      dockerfile: Dockerfile
+      target: dev # For production use "prd"
     env_file:
       # REACT_APP_CAPTCHA_SITE_KEY
       - irods.secrets.cfg
@@ -386,7 +387,8 @@ services:
   dh-home:
     build:
       context: externals/dh-home
-      dockerfile: Dockerfile #dockerfile: Dockerfile.prd
+      dockerfile: Dockerfile
+      target: dev # For production use "prd"
     image: ${ENV_REGISTRY_HOST}/docker-dev/dh-home:${ENV_TAG}
     environment:
       LOGSPOUT: ignore
@@ -409,7 +411,7 @@ services:
     build:
       context: externals/dh-mdr-home
       dockerfile: Dockerfile
-      target: "dev" # For production use "prd"
+      target: dev # For production use "prd"
     image: ${ENV_REGISTRY_HOST}/docker-dev/dh-mdr-home:${ENV_TAG}
     environment:
       LOGSPOUT: ignore
